[package]
name = "ethereum_serde_utils"
version = "0.5.1"
edition = "2021"
description = "Serialization and deserialization utilities for JSON representations of Ethereum types"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/ethereum_serde_utils"
documentation = "https://docs.rs/ethereum_serde_utils"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "serde_utils"

[dependencies]
serde = { version = "1.0.0", default-features = false, features = ["derive"] }
serde_json = "1.0.0"
hex = "0.4.3"
ethereum-types = { version = "0.14.1", default-features = false, features = ["serialize"] }
